--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/ryan.html">
+                    <img width="304" height="304" class="prof-image" src="../immersive-mod-1-introduction-deploy-on-day-one-nyc-web-021720/img/students/Tiger pic.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/ryan.html">Ryan Vaznis</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">They're grreeeat!</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I am young.</p>
                 </div>
                 <div class="clear"></div>
               </li>
